# ads

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg-configuration.json  vcpkg.json
cmake/: adsConfig.cmake.in
dope/: deps.yml
include/ads/: ads-concepts-basic.hpp  ads-concepts-fns.hpp  ads-mipmap.hpp  ads-ml.hpp  ads-vocab.hpp  ads.hpp
test/: CMakeLists.txt
test/src/: main.cpp
